--- a/application/index/view/index/sceneryDetail.html
+++ b/application/index/view/index/sceneryDetail.html
@@ -74,7 +74,7 @@
                         {/volist}
                         <input type="hidden" name="gname" value="{$scenerys['gd_title']}">
                         <input type="hidden" name="bid" value="{$bid}">
-
+                        <input type="hidden" name="cid" value="{$cid}">
 
 
                         <div class="col-md-6">
