--- a/application/admin/view/order/diliver.html
+++ b/application/admin/view/order/diliver.html
@@ -42,7 +42,7 @@
                                 <td style="text-align: center">{$v['o_num']}</td>
                                 <td style="text-align: center">{$v['o_total']}</td>
                                 <td style="text-align: center">
-                                    <a href="{:url('admin/busorder/showdetail',['aid'=>$v['o_uid']])}" class="btn btn-info btn-sm">查看详细信息</a>
+                                    <a href="{:url('admin/busorder/showdetail',['aid'=>$v['o_uid']])}" class="btn btn-info btn-sm">查看收货人信息</a>
                                     <p style="display: none" class="oid">{$v['o_id']}</p>
                                     <button class="btn btn-success btn-sm change">转为已完成</button>
                                 </td>
