--- a/mobile/index/view/index/index.html
+++ b/mobile/index/view/index/index.html
@@ -55,7 +55,7 @@
             <li><a href="" class="iconfont pet_nav_mengzhuanti ">&#xe622;</a><span>住宿</span></li>
             <li><a href="" class="iconfont pet_nav_meirong ">&#xe629;</a><span>活动</span></li>
             <li><a href="" class="iconfont pet_nav_yiyuan ">&#xe602;</a><span>天气</span></li>
-            <li><a href="" class="iconfont pet_nav_dianpu ">&#xe604;</a><span>新闻</span></li>
+            <li><a href="{:url('/showLogin')}" class="iconfont pet_nav_dianpu ">&#xe604;</a><span>登录/注册</span></li>
             <li><a href="javascript:;" class="iconfont pet_nav_gengduo ">&#xe600;</a><span>个人中心</span></li>
         </ul>
         <div class="pet_more_list"><div class="pet_more_list_block">
