--- a/application/admin/view/carousel/index.html
+++ b/application/admin/view/carousel/index.html
@@ -273,7 +273,7 @@
             url: '/carouseldel/' + id,
             dataType: 'json',
             success: function (data) {
-                console.log(data);
+                //console.log(data);
                 if (data.status) {
                     toastr.success(data.info);
                     // 将当前的节点删除掉
