--- a/public/static/mobile/css/user.css
+++ b/public/static/mobile/css/user.css
@@ -1,4 +1,4 @@
-@charset "utf8";
+/*@charset "utf8";*/
 /**{*/
 	/*margin: 0;*/
 	/*padding: 0;*/
@@ -19,37 +19,37 @@
 	/*font-size: 14px;*/
 	/*color: #69696d;*/
 /*}*/
-.clearfix {
-	*zoom: 1;
-}
-.clearfix:before,
-.clearfix:after {
-	display: table; 
-	line-height: 0;
-	content: "";
-}
-.clearfix:after {
-	clear: both;
-}
-/*======= 表单 =======*/
-.login-box{
-	position: absolute;
-	z-index: 9;
-    width: 435px;
-    top: 50%;
-    left: 50%;
-    margin-top: -200px;
+/*.clearfix {*/
+	/**zoom: 1;*/
+/*}*/
+/*.clearfix:before,*/
+/*.clearfix:after {*/
+	/*display: table; */
+	/*line-height: 0;*/
+	/*content: "";*/
+/*}*/
+/*.clearfix:after {*/
+	/*clear: both;*/
+/*}*/
+/*!*======= 表单 =======*!*/
+/*.login-box{*/
+	/*position: absolute;*/
+	/*z-index: 9;*/
+    /*width: 435px;*/
+    /*top: 50%;*/
+    /*left: 50%;*/
+    /*margin-top: -200px;*/
     /*margin-left: -205px;*/
-	padding-top: 45px;
-    border: 1px solid #666;
-    background: #373737;
-	border-radius: 2px;
-	box-shadow: 10px 10px 5px #000;
-	color: #fff;
-}
-.login-box form{
-	position: relative;
-}
+	/*padding-top: 45px;*/
+    /*border: 1px solid #666;*/
+    /*background: #373737;*/
+	/*border-radius: 2px;*/
+	/*box-shadow: 10px 10px 5px #000;*/
+	/*color: #fff;*/
+/*}*/
+/*.login-box form{*/
+	/*position: relative;*/
+/*}*/
 .form-inline{
 	position: relative;
 	display: block;
@@ -61,29 +61,31 @@
 	height: 40px;
 	line-height: 40px;
 }
-/*.form-inline-font{*/
-	/*position: absolute;*/
-	/*left: 0;*/
-	/*width: 110px;*/
-	/*padding-right: 10px;*/
-	/*font-family: "Arial";*/
-	/*font-size: 15px;*/
-	/*text-align: right;*/
-/*}*/
-
-/*.form-inline-input input,*/
-/*.code-box{*/
-	/*padding: 0 10px;*/
-    /*width: 300px;*/
-    /*height: 40px;*/
-    /*color: #fff;*/
-    /*text-shadow: 1px 1px 1px black;*/
-    /*background: rgba(0, 0, 0, 0.16);*/
-    /*border: 0;*/
-    /*border-radius: 5px;*/
-	/*outline: none;*/
-	/*box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.06);*/
-/*}*/
+.form-inline-font{
+	position: absolute;
+	left: 0;
+	width: 110px;
+	padding-right: 10px;
+	font-family: "Arial";
+	font-size: 15px;
+	text-align: right;
+}
+.form-inline-input{
+	padding-left: 110px;
+}
+.form-inline-input input,
+.code-box{
+	padding: 0 10px;
+    width: 300px;
+    height: 40px;
+    color: #fff;
+    text-shadow: 1px 1px 1px black;
+    background: rgba(0, 0, 0, 0.16);
+    border: 0;
+    border-radius: 5px;
+	outline: none;
+	box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.06);
+}
 .code-box{
 	position: relative;
 }
@@ -97,13 +99,13 @@
 	line-height: 40px;
 	border-radius: 5px;
 }
-/*.code-box span{*/
-	/*width: 40px;*/
-	/*background-color:#fff;*/
-	/*font-family: "宋体";*/
-	/*!*font-size: 16px;*!*/
-	/*cursor: pointer;*/
-/*}*/
+.code-box span{
+	width: 40px;
+	background-color:#fff;
+	font-family: "宋体";
+	font-size: 16px;
+	cursor: pointer;
+}
 .code-box p{
 	width: 0;
 	background-color: #FFFF99;
@@ -114,18 +116,18 @@
 .code-box .code-input{
 	display: none;
 }
-.login-btn{
-	padding-right: 25px;
-	padding-top: 15px;
-	padding-bottom: 10px;
-	text-align: right;
-	font-size: 0;
-}
-.user-btn-link{
-	display: inline-block;
-	vertical-align: sub;
-	padding-right: 10px;
-}
+/*.login-btn{*/
+	/*padding-right: 25px;*/
+	/*padding-top: 15px;*/
+	/*padding-bottom: 10px;*/
+	/*text-align: right;*/
+	/*font-size: 0;*/
+/*}*/
+/*.user-btn-link{*/
+	/*display: inline-block;*/
+	/*vertical-align: sub;*/
+	/*padding-right: 10px;*/
+/*}*/
 /*.user-btn-link a{*/
 	/*color: #fff;*/
 	/*font-size: 13px;*/
@@ -133,9 +135,9 @@
 /*.user-btn-link a + a{*/
 	/*margin-left: 5px;*/
 /*}*/
-.user-btn-link a:hover{
-	text-decoration: underline;
-}
+/*.user-btn-link a:hover{*/
+	/*text-decoration: underline;*/
+/*}*/
 /*.login-btn button{*/
 	/*border: none;*/
 	/*padding: 8px 12px;*/
